--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -42,11 +42,11 @@
         </div>
       </li>
       <li class="nav-item">
-        <%= link_to "S'inscrire", "/s'inscrire", class:"nav-link" %>
+        <%= link_to "S'inscrire", "/inscription", class:"nav-link" %>
       </li>
       <li class="nav-item">
         <%= link_to destroy_user_session_path, method: :delete, class:"nav-link" do %>
-          <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Log out") %>
+          <%= t(".sign_out", default: "Log out") %>
         <% end %>
       </li>
     </ul>
