--- a/app/stylesheets/application.scss
+++ b/app/stylesheets/application.scss
@@ -1,12 +1,14 @@
 // Graphical variables
 @import "config/fonts";
 @import "config/colors";
+@import "config/breakpoint";
 @import "config/bootstrap_variables";
 
 // External libraries
 @import '~bootstrap/scss/bootstrap.scss';
 
+
 // Your CSS partials
-// @import "layouts/index";
-// @import "components/index";
 // @import "pages/index";
+// @import "layouts/index";
+@import "components/index";
