--- a/app/stylesheets/config/_colors.scss
+++ b/app/stylesheets/config/_colors.scss
@@ -2,9 +2,9 @@
 
 // For example:
 $red: #EE5F5B;
-$blue: #469AE0;
+$blue: #00aacd;
 $yellow: #FDB631;
 $orange: #E67E22;
-$green: #32B796;
+$green: #99CC00;
 $gray: #000000;
 $light-gray: #F4F4F4;
