--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,11 +12,11 @@
           Comment
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <%= link_to "Les objectifs du défit", "/comment", class:"dropdown-item", id:"comment1"%>
+          <%= link_to "Les objectifs du défi", "/comment", class:"dropdown-item", id:"comment1"%>
           <%= link_to "Les structures éligibles", "/comment", class:"dropdown-item", id:"comment2"%>
           <%= link_to "Les déchets concernés", "/comment", class:"dropdown-item", id:"comment3"%>
           <%= link_to "Comment ça se passe ?", "/comment", class:"dropdown-item", id:"comment4"%>
-          <%= link_to "Planning ?", "/comment", class:"dropdown-item", id:"comment5"%>
+          <%= link_to "Planning", "/comment", class:"dropdown-item", id:"comment5"%>
           <%= link_to "Combien ça coûte ?", "/comment", class:"dropdown-item", id:"comment6"%>
         </div>
       </li>
