--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -44,11 +44,11 @@
       <li class="nav-item">
         <%= link_to "S'inscrire", "/inscription", class:"nav-link text-light-gray" %>
       </li>
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <%= link_to destroy_user_session_path, method: :delete, class:"nav-link" do %>
           <%= t(".sign_out", default: "Log out") %> <%= inline_svg "sign-out", width: 30, class:"ml-2 text-body-bg" %>
         <% end %>
-      </li>
+      </li> -->
     </ul>
   </div>
 </nav>
