--- a/app/views/pages/pourquoi.html.erb
+++ b/app/views/pages/pourquoi.html.erb
@@ -1,143 +1,143 @@
-<div>
-  <h1>1. Pourquoi réduire ses déchets en entreprise ? </h1>
-
-  <div class="card">
-    <h2>Environnement</h2>
-    <p>140 kg de déchets / an en moyenne sont produit par un·e salarié·e de bureau</p>
+<div class="container">
+  <div>
+    <h1>1. Pourquoi réduire ses déchets en entreprise ? </h1>
+    <div class="row">
+      <div class="col-sm-6 col-md-3">
+        <div class="card">
+          <h2>Environnement</h2>
+          <p>140 kg de déchets / an en moyenne sont produit par un·e salarié·e de bureau</p>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <div class="card">
+          <h2>Environnement </h2>
+          <p>
+            Les  solutions  actuelles  pour  traiter  les  déchets  ultimes  ne  sont  pas  optimales  (enfouissement  et  incinération).  Le  recyclage  consomme  aussi  beaucoup  de  ressources  naturelles  (énergie,  eau...)La  réduction  des  déchets  à  la  sourceréduits  les  impacts  environnementaux  (ressources  naturelles,  pollutions...)Le  Zéro  Déchet  (ZD)estune  démarcheayant  pour  objectif  de  réduire  vos  déchets  autant  que  possible.
+          </p>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <div class="card">
+          <h2>Management</h2>
+          <p>77% des salariés augmentent leur fierté d'appartenance grâce au Développement Durable*</p>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <div class="card">
+          <h2>Management </h2>
+          <p>
+            Une  politique  ambitieuse  de  réduction  de  vos  déchets  est  un  élément  valorisant,  de  plus  en  plus  attendu  parvos  salarié·e·s,  d'ailleurs  souvent  déjà  pratiquée  dans  leur  vie  personnelle.La  démarche  ZD  est  une  formidable  opportunité  de  mobiliser  vos  équipes  autour  d’un  projet  commun,  dépassant  les  fonctions  de  chacun·e  et  de  contribuer  au  mieux-vivre  dans  votre  structure.
+          </p>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <div class="card">
+          <h2>Image externe</h2>
+          <p>82 % des entreprises considèrent le dDéveloppement dDurable comme un facteur de différenciation*</p>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3">
+         <div class="card">
+          <h2>Image externe</h2>
+          <p>
+            Tout  comme  les  salarié·e·s,  vos  client·e·s,  fournisseurs,  administré·e·s,  bénéficiaires  et  partenaires  sont  de  plus  en  plus  regardants  sur  le  agissementdes  structures  professionnelles  en  matière  de  Développement  Durable,  etnotamment  en  ce  qui  concerne  les  déchets.Mettre  en  valeur  votre  engagement  environnemental  et  vos  actions  dans  une  démarche  ZD  contribue  positivement  à  votre  image  externe.
+          </p>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <div class="card">
+          <h2>Economie</h2>
+          <p>Plus de 14x la seule facture du prestataire déchets : coût complet des déchets*</p>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <div class="card">
+          <h2>Economie</h2>
+          <p>
+            Le  coût  complet  de  vos  déchets  inclut les  coûts  de  :
+            -  la  gestion  des  déchets  (collectivité  publique  ou  prestataire  privé),
+            -  la  gestion  interne  (temps  passé,  matériel,  espace  de  stockage...),
+            -  la  génération  (coût  d’achat  des  objets  et  emballages  qui  deviennent  des  déchets),
+            -  du  temps  passé  aux  achats  (sourcing,  mise  en  concurrence,  contrat),Une  meilleure  gestion,  alliée  à  une  démarche  de  réduction,  permet  de  diminuer  le  coût  global  de  vos  déchets
+          </p>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <div class="card">
+          <h2>Logistique</h2>
+          <p>Des contenants adaptés font gagner de 2 à 10 fois plus d’espace et améliorent la logistique d'évacuation.</p>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <div class="card">
+          <h2>Logistique</h2>
+          <p>
+            Les  déchets  stockés  en  vrac  dans  unebenne  ou  dans  un  bac  prennentbeaucoup  de  place,  et  ne  sont  pas  triés. Des  contenants  adaptés  font  gagner  de 2  à  10  fois  plus  d’espace  et  améliorentla  logistique  d'évacuation.  Optimiser  le  rangement  et  réduire  ses déchets  permettent  ainsi  de  diminuer l'espace  de  stockage  et  d'optimiser  la logistique.
+          </p>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <div class="card">
+          <h2>Réglementation</h2>
+          <p>5 flux de déchets doivent obligatoirement être triés et valorisés</p>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <div class="card">
+          <h2>Réglementation</h2>
+          <p>
+            Tout  producteur  de  déchet  en  estresponsable  jusqu’à  leur  éliminationfinale-article  L  541-2  et  L  541-22  ducode  de  l’environnement-Les  entreprises  ont  désormais  uneobligation  générale  de  tri  de  leursdéchets,  qui  concerne  5  flux  de  déchets(bois,  plastiques,  métaux,  verre,papier/carton).  Ellesdoivent  les  trierà  la  source  et  organiser  leur  collecteséparément  des  autres  déchets  pourpermettre  leur  valorisation  .  -“décret5  flux”  du  10  mars  2016-
+          </p>
+        </div>
+      </div>
+    </div>
   </div>
 
-  <div class="card">
-    <h2>Management</h2>
-    <p>77% des salariés augmentent leur fierté d'appartenance grâce au Développement Durable*</p>
+  <div>
+    <h1>2. Pourquoi ma structure s'engagerait dans ce défi ?</h1>
+
+    <div class="flip-card">
+      <h2>Pour être mis en valeur</h2>
+      <p>Une communication externe sera mise en œuvre tout au long du défi, et notamment lors de l'événement de clôture, pour valoriser les participants et leurs accomplissements. </p>
+    </div>
+
+    <div class="flip-card">
+      <h2>Pour inclure vos équipes</h2>
+      <p>Le Défi a pour objectif d'impliquer tous les salariés de la structure, de générer une réelle collaboration. Ainsi participer au projet permet, au sein de chaque structure, d'agir ensemble, de fédérer et mobiliser une équipe autour d'un projet commun.</p>
+    </div>
+
+    <div class="flip-card">
+      <h2>Pour l'aspect collectif</h2>
+      <p>L'intérêt du défi est de mettre en commun les doutes, les difficultés, les idées, les bonnes pratiques. Les déchets de fonctionnement concernent toutes les structures, ce qui permet de se nourrir des expériences des autres.
+      </p>
+    </div>
+
+    <div class="flip-card">
+      <h2>Pour l'accompagnement</h2>
+      <p>Tout au long du défi, un suivi des déchets et des comportement est effectué en interne. Des rencontres collectives régulières, ainsi qu'un accompagnement individuel permettent à chaque structure de fertiliser le terreau emmenant à l'action collective et durable.</p>
+    </div>
+
+    <div class="flip-card">
+      <h2>Pour son type de déchet concerné</h2>
+      <p>Toute personne, toute entreprise est concernée par les déchets de fonctionnement (papier, stylos, ordinateurs, gobelets de café, emballages etc).  Les changements à ce niveau demandent en général peu d'investissements et sont rapides à mettre en place.  </p>
+    </div>
+
+    <div class="flip-card">
+      <h2>Pour sa complémentarité</h2>
+      <p>Le Défi  est complémentaire à d'autres outils et démarches existants : RSE, ISO 14001 ISO 26000, bilan carbone, Agenda 21, éco-structure (école, commerçants), labels spécifiques, Gagnants sur tous les coûts etc. Avec le vous pourrez ainsi initier ou compléter votre  démarche d'éco-responsabilité.</p>
+    </div>
+
+    <div class="flip-card">
+      <h2>Pour son approche comportementale</h2>
+      <p>L'idée est d'accompagner les structures participantes pour qu'elles fassent par elles-mêmes : faire émerger les idées, les accompagner dans les choix, les aider à la mise en place de solutions. Le but est de changer les comportements dans la durée, de provoquer l'engagement et l'action.</p>
+    </div>
+
+    <div class="flip-card">
+      <h2>Pour gagner !</h2>
+      <p>Le défi apporte également une émulation collective car la compétition favorise l'envie de s'améliorer et de finir gagnant.
+
+      La cerise sur la gâteau, en plus de tous les autres avantages du Défi, c'est de gagner ! La plus belle évolution (technique et comportementale) donnera un vainqueur, qui sera mis en avant dans toute la communication externe.
+      </p>
+    </div>
   </div>
-
-  <div class="card">
-    <h2>Image externe</h2>
-    <p>82 % des entreprises considèrent le dDéveloppement dDurable comme un facteur de différenciation*</p>
-  </div>
-
-  <div class="card">
-    <h2>Economie</h2>
-    <p>Plus de 14x la seule facture du prestataire déchets : coût complet des déchets*</p>
-  </div>
-
-  <div class="card">
-    <h2>Logistique</h2>
-    <p>Des contenants adaptés font gagner de 2 à 10 fois plus d’espace et améliorent la logistique d'évacuation.</p>
-  </div>
-
-  <div class="card">
-    <h2>Réglementation</h2>
-    <p>5 flux de déchets doivent obligatoirement être triés et valorisés</p>
-  </div>
-
-  <div class="card">
-    <h2>Environnement </h2>
-    <p>
-      Les solutions actuelles pour traiter les déchets ultimes ne sont pas optimales (enfouissementstockage et incinération).
-      Le recyclage consomme aussi beaucoup d'énergie et de ressources (eau).de ressources naturelles (énergie, eau...)
-      La réduction des déchets à la source évite le gaspillage des ressources et préserve la matière. réduits les impacts environnementaux (ressources naturelles, pollutions...)
-      Le Zéro Déchet (ZD) est une démarche, qui signifie que l'on cherche à ayant pour objectif de réduire sesvos déchets le plusautant que possible.
-    </p>
-  </div>
-
-  <div class="card">
-    <h2>Management </h2>
-    <p>
-      Une politique ambitieuse de réduction desde vos déchets est un élément valorisant, et surtout de plus en plus attendu par lesvos salarié·e·s. , d'ailleurs souvent déjà pratiquée dans leur vie personnelle.
-
-      Il s’agit également d’un La démarche ZD est une formidable moyenopportunité de mobiliser sonvos équipes autour d’un projet commun, dépassant les fonctions de chacun·e et qui contribuerade contribuer au mieux-vivre dansles locaux  votre structure.
-    </p>
-  </div>
-
-  <div class="card">
-    <h2>Image externe</h2>
-    <p>
-      Tout comme les salarié·e·s, les vos client·e·s, fournisseurs et, administré·e·s, bénéficiaires et partenaires sont de plus en plus regardants sur le comportementagissement des entreprisesstructures professionnelles en matière de dDéveloppement dDurable, et notamment en ce qui concerne la gestion des déchets. es déchets.
-
-      Mettre en valeur votre engagement environnemental et vos actions dans une démarche zéro déchetZD contribue positivement à votre image externe.
-    </p>
-  </div>
-
-  <div class="card">
-    <h2>Economie</h2>
-    <p>
-      Le coût complet des e vos déchets inclutfacturea l  les coûts de·d' :
-          • la gestion des déchets (collectivité publique ou prestataire privé),
-          •  le coût dela gestion interne (temps passé, matériel, espace de stockage...),
-          •  de le coût génération, c’est-à-dire le  (coût d’achat des objets et emballages qui deviennent des déchets) .,
-          • temps passé aux achats (sourcing, mise en concurrence, contrat),
-          • acheminement.
-
-      Une meilleure gestion, alliée à une démarche de réduction, permet de diminuer le coût global de vos déchets.
-    </p>
-  </div>
-
-  <div class="card">
-    <h2>Logistique</h2>
-    <p>
-      Les déchets stockés en vrac dans une benne ou dans un bac prennent beaucoup de place, et ne sont pas triés.
-      Des contenants adaptés font gagner de 2 à 10 fois plus d’espace et améliorent la logistique d'évacuation.
-      Optimiser le rangement et réduire ses déchets permettent ainsi de diminuer l'espace de stockage et d'optimiser la logistique.
-    </p>
-  </div>
-
-  <div class="card">
-    <h2>Réglementation</h2>
-    <p>
-      Tout producteur de déchet en est responsable jusqu’à leur élimination finale - article L 541-2 et L 541-22 du code de l’environnement-
-
-      Les entreprises ont désormais une obligation générale de tri de leurs déchets, qui concerne 5 flux de déchets (bois, plastiques, métaux, verre, papier/carton). Elles doivent les trier à la source et organiser leur collecte séparément des autres déchets pour permettre leur valorisation . -“décret 5 flux” du 10 mars 2016- ,
-    </p>
-  </div>
-
-</div>
-
-<div>
-  <h1>2. Pourquoi ma structure s'engagerait dans ce défi ?</h1>
-
-  <div class="flip-card">
-    <h2>Pour être mis en valeur</h2>
-    <p>Une communication externe sera mise en œuvre tout au long du défi, et notamment lors de l'événement de clôture, pour valoriser les participants et leurs accomplissements. </p>
-  </div>
-
-  <div class="flip-card">
-    <h2>Pour inclure vos équipes</h2>
-    <p>Le Défi a pour objectif d'impliquer tous les salariés de la structure, de générer une réelle collaboration. Ainsi participer au projet permet, au sein de chaque structure, d'agir ensemble, de fédérer et mobiliser une équipe autour d'un projet commun.</p>
-  </div>
-
-  <div class="flip-card">
-    <h2>Pour l'aspect collectif</h2>
-    <p>L'intérêt du défi est de mettre en commun les doutes, les difficultés, les idées, les bonnes pratiques. Les déchets de fonctionnement concernent toutes les structures, ce qui permet de se nourrir des expériences des autres.
-    </p>
-  </div>
-
-  <div class="flip-card">
-    <h2>Pour l'accompagnement</h2>
-    <p>Tout au long du défi, un suivi des déchets et des comportement est effectué en interne. Des rencontres collectives régulières, ainsi qu'un accompagnement individuel permettent à chaque structure de fertiliser le terreau emmenant à l'action collective et durable.</p>
-  </div>
-
-  <div class="flip-card">
-    <h2>Pour son type de déchet concerné</h2>
-    <p>Toute personne, toute entreprise est concernée par les déchets de fonctionnement (papier, stylos, ordinateurs, gobelets de café, emballages etc).  Les changements à ce niveau demandent en général peu d'investissements et sont rapides à mettre en place.  </p>
-  </div>
-
-  <div class="flip-card">
-    <h2>Pour sa complémentarité</h2>
-    <p>Le Défi  est complémentaire à d'autres outils et démarches existants : RSE, ISO 14001 ISO 26000, bilan carbone, Agenda 21, éco-structure (école, commerçants), labels spécifiques, Gagnants sur tous les coûts etc. Avec le vous pourrez ainsi initier ou compléter votre  démarche d'éco-responsabilité.</p>
-  </div>
-
-  <div class="flip-card">
-    <h2>Pour son approche comportementale</h2>
-    <p>L'idée est d'accompagner les structures participantes pour qu'elles fassent par elles-mêmes : faire émerger les idées, les accompagner dans les choix, les aider à la mise en place de solutions. Le but est de changer les comportements dans la durée, de provoquer l'engagement et l'action.</p>
-  </div>
-
-  <div class="flip-card">
-    <h2>Pour gagner !</h2>
-    <p>Le défi apporte également une émulation collective car la compétition favorise l'envie de s'améliorer et de finir gagnant.
-
-    La cerise sur la gâteau, en plus de tous les autres avantages du Défi, c'est de gagner ! La plus belle évolution (technique et comportementale) donnera un vainqueur, qui sera mis en avant dans toute la communication externe.
-    </p>
-  </div>
-
 </div>
