flip-card created, need some style

--- a/app/views/pages/pourquoi.html.erb
+++ b/app/views/pages/pourquoi.html.erb
@@ -1,102 +1,138 @@
 <div class="container">
-  <div>
-    <h1>1. Pourquoi réduire ses déchets en entreprise ? </h1>
-    <div class="row">
-      <div class="col-sm-6 col-md-3">
+  <h1>1. Pourquoi réduire ses déchets en entreprise ? </h1>
+
+  <div class="row">
+    <div class="col-xs-12 col-md-6">
+      <figure class="card card-flip">
         <div class="card">
-          <h2>Environnement</h2>
-          <p>140 kg de déchets / an en moyenne sont produit par un·e salarié·e de bureau</p>
+          <div class="card-body">
+            <h2 class="card-title">Environnement</h2>
+            <p class="card-text">140 kg de déchets / an en moyenne sont produit par un·e salarié·e de bureau</p>
+          </div>
         </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
+
         <div class="card">
-          <h2>Environnement </h2>
-          <p>
-            Les  solutions  actuelles  pour  traiter  les  déchets  ultimes  ne  sont  pas  optimales  (enfouissement  et  incinération).  Le  recyclage  consomme  aussi  beaucoup  de  ressources  naturelles  (énergie,  eau...)La  réduction  des  déchets  à  la  sourceréduits  les  impacts  environnementaux  (ressources  naturelles,  pollutions...)Le  Zéro  Déchet  (ZD)estune  démarcheayant  pour  objectif  de  réduire  vos  déchets  autant  que  possible.
-          </p>
+          <div class="card-body">
+            <h2 class="card-title">Environnement </h2>
+            <p class="card-text">
+              Les  solutions  actuelles  pour  traiter  les  déchets  ultimes  ne  sont  pas  optimales  (enfouissement  et  incinération).  Le  recyclage  consomme  aussi  beaucoup  de  ressources  naturelles  (énergie,  eau...)La  réduction  des  déchets  à  la  sourceréduits  les  impacts  environnementaux  (ressources  naturelles,  pollutions...)Le  Zéro  Déchet  (ZD)estune  démarcheayant  pour  objectif  de  réduire  vos  déchets  autant  que  possible.
+            </p>
+          </div>
         </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
+      </figure>
+    </div>
+
+    <div class="col-xs-12 col-md-6">
+      <figure class="card card-flip">
         <div class="card">
-          <h2>Management</h2>
-          <p>77% des salariés augmentent leur fierté d'appartenance grâce au Développement Durable*</p>
+          <div class="card-body">
+            <h2 class="card-title">Management</h2>
+            <p class="card-text">77% des salariés augmentent leur fierté d'appartenance grâce au Développement Durable*</p>
+          </div>
         </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
+
         <div class="card">
-          <h2>Management </h2>
-          <p>
-            Une  politique  ambitieuse  de  réduction  de  vos  déchets  est  un  élément  valorisant,  de  plus  en  plus  attendu  parvos  salarié·e·s,  d'ailleurs  souvent  déjà  pratiquée  dans  leur  vie  personnelle.La  démarche  ZD  est  une  formidable  opportunité  de  mobiliser  vos  équipes  autour  d’un  projet  commun,  dépassant  les  fonctions  de  chacun·e  et  de  contribuer  au  mieux-vivre  dans  votre  structure.
-          </p>
+          <div class="card-body">
+            <h2 class="card-title">Management </h2>
+            <p class="card-text">
+              Une  politique  ambitieuse  de  réduction  de  vos  déchets  est  un  élément  valorisant,  de  plus  en  plus  attendu  parvos  salarié·e·s,  d'ailleurs  souvent  déjà  pratiquée  dans  leur  vie  personnelle.La  démarche  ZD  est  une  formidable  opportunité  de  mobiliser  vos  équipes  autour  d’un  projet  commun,  dépassant  les  fonctions  de  chacun·e  et  de  contribuer  au  mieux-vivre  dans  votre  structure.
+            </p>
+          </div>
         </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
+      </figure>
+    </div>
+
+    <div class="col-xs-12 col-md-6">
+      <figure class="card card-flip">
         <div class="card">
-          <h2>Image externe</h2>
-          <p>82 % des entreprises considèrent le dDéveloppement dDurable comme un facteur de différenciation*</p>
+          <div class="card-body">
+            <h2 class="card-title">Image externe</h2>
+            <p class="card-text">82 % des entreprises considèrent le dDéveloppement dDurable comme un facteur de différenciation*</p>
+          </div>
         </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
-         <div class="card">
-          <h2>Image externe</h2>
-          <p>
-            Tout  comme  les  salarié·e·s,  vos  client·e·s,  fournisseurs,  administré·e·s,  bénéficiaires  et  partenaires  sont  de  plus  en  plus  regardants  sur  le  agissementdes  structures  professionnelles  en  matière  de  Développement  Durable,  etnotamment  en  ce  qui  concerne  les  déchets.Mettre  en  valeur  votre  engagement  environnemental  et  vos  actions  dans  une  démarche  ZD  contribue  positivement  à  votre  image  externe.
-          </p>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
+
         <div class="card">
-          <h2>Economie</h2>
-          <p>Plus de 14x la seule facture du prestataire déchets : coût complet des déchets*</p>
+          <div class="card-body">
+            <h2 class="card-title">Image externe</h2>
+            <p class="card-text">
+              Tout  comme  les  salarié·e·s,  vos  client·e·s,  fournisseurs,  administré·e·s,  bénéficiaires  et  partenaires  sont  de  plus  en  plus  regardants  sur  le  agissementdes  structures  professionnelles  en  matière  de  Développement  Durable,  etnotamment  en  ce  qui  concerne  les  déchets.Mettre  en  valeur  votre  engagement  environnemental  et  vos  actions  dans  une  démarche  ZD  contribue  positivement  à  votre  image  externe.
+            </p>
+          </div>
         </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
+      </figure>
+    </div>
+
+    <div class="col-xs-12 col-md-6">
+      <figure class="card card-flip">
         <div class="card">
-          <h2>Economie</h2>
-          <p>
-            Le  coût  complet  de  vos  déchets  inclut les  coûts  de  :
-            -  la  gestion  des  déchets  (collectivité  publique  ou  prestataire  privé),
-            -  la  gestion  interne  (temps  passé,  matériel,  espace  de  stockage...),
-            -  la  génération  (coût  d’achat  des  objets  et  emballages  qui  deviennent  des  déchets),
-            -  du  temps  passé  aux  achats  (sourcing,  mise  en  concurrence,  contrat),Une  meilleure  gestion,  alliée  à  une  démarche  de  réduction,  permet  de  diminuer  le  coût  global  de  vos  déchets
-          </p>
+          <div class="card-body">
+            <h2 class="card-title">Economie</h2>
+            <p class="card-text">Plus de 14x la seule facture du prestataire déchets : coût complet des déchets*</p>
+          </div>
         </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
+
         <div class="card">
-          <h2>Logistique</h2>
-          <p>Des contenants adaptés font gagner de 2 à 10 fois plus d’espace et améliorent la logistique d'évacuation.</p>
+          <div class="card-body">
+            <h2 class="card-title">Economie</h2>
+            <p class="card-text">
+              Le  coût  complet  de  vos  déchets  inclut les  coûts  de  :
+              -  la  gestion  des  déchets  (collectivité  publique  ou  prestataire  privé),
+              -  la  gestion  interne  (temps  passé,  matériel,  espace  de  stockage...),
+              -  la  génération  (coût  d’achat  des  objets  et  emballages  qui  deviennent  des  déchets),
+              -  du  temps  passé  aux  achats  (sourcing,  mise  en  concurrence,  contrat),Une  meilleure  gestion,  alliée  à  une  démarche  de  réduction,  permet  de  diminuer  le  coût  global  de  vos  déchets
+            </p>
+          </div>
         </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
+      </figure>
+    </div>
+
+    <div class="col-xs-12 col-md-6">
+      <figure class="card card-flip">
         <div class="card">
-          <h2>Logistique</h2>
-          <p>
-            Les  déchets  stockés  en  vrac  dans  unebenne  ou  dans  un  bac  prennentbeaucoup  de  place,  et  ne  sont  pas  triés. Des  contenants  adaptés  font  gagner  de 2  à  10  fois  plus  d’espace  et  améliorentla  logistique  d'évacuation.  Optimiser  le  rangement  et  réduire  ses déchets  permettent  ainsi  de  diminuer l'espace  de  stockage  et  d'optimiser  la logistique.
-          </p>
+          <div class="card-body">
+            <h2 class="card-title">Logistique</h2>
+            <p class="card-text">Des contenants adaptés font gagner de 2 à 10 fois plus d’espace et améliorent la logistique d'évacuation.</p>
+          </div>
         </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
+
         <div class="card">
-          <h2>Réglementation</h2>
-          <p>5 flux de déchets doivent obligatoirement être triés et valorisés</p>
+          <div class="card-body">
+            <h2 class="card-title">Logistique</h2>
+            <p class="card-text">
+              Les  déchets  stockés  en  vrac  dans  unebenne  ou  dans  un  bac  prennentbeaucoup  de  place,  et  ne  sont  pas  triés. Des  contenants  adaptés  font  gagner  de 2  à  10  fois  plus  d’espace  et  améliorentla  logistique  d'évacuation.  Optimiser  le  rangement  et  réduire  ses déchets  permettent  ainsi  de  diminuer l'espace  de  stockage  et  d'optimiser  la logistique.
+            </p>
+          </div>
         </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
+      </figure>
+    </div>
+
+    <div class="col-xs-12 col-md-6">
+      <figure class="card card-flip">
         <div class="card">
-          <h2>Réglementation</h2>
-          <p>
-            Tout  producteur  de  déchet  en  estresponsable  jusqu’à  leur  éliminationfinale-article  L  541-2  et  L  541-22  ducode  de  l’environnement-Les  entreprises  ont  désormais  uneobligation  générale  de  tri  de  leursdéchets,  qui  concerne  5  flux  de  déchets(bois,  plastiques,  métaux,  verre,papier/carton).  Ellesdoivent  les  trierà  la  source  et  organiser  leur  collecteséparément  des  autres  déchets  pourpermettre  leur  valorisation  .  -“décret5  flux”  du  10  mars  2016-
-          </p>
+          <div class="card-body">
+            <h2 class="card-title">Réglementation</h2>
+            <p class="card-text">5 flux de déchets doivent obligatoirement être triés et valorisés</p>
+          </div>
         </div>
-      </div>
+
+        <div class="card">
+          <div class="card-body">
+            <h2 class="card-title">Réglementation</h2>
+            <p class="card-text">
+              Tout  producteur  de  déchet  en  est responsable  jusqu’à  leur  élimination finale-article  L  541-2  et  L  541-22  ducode  de  l’environnement-Les  entreprises  ont  désormais  uneobligation  générale  de  tri  de  leursdéchets,  qui  concerne  5  flux  de  déchets(bois,  plastiques,  métaux,  verre,papier/carton).  Ellesdoivent  les  trierà  la  source  et  organiser  leur  collecteséparément  des  autres  déchets  pourpermettre  leur  valorisation  .  -“décret5  flux”  du  10  mars  2016-
+            </p>
+          </div>
+        </div>
+      </figure>
     </div>
   </div>
+
 
   <div>
     <h1>2. Pourquoi ma structure s'engagerait dans ce défi ?</h1>
 
     <div class="flip-card">
+      </div>
       <h2>Pour être mis en valeur</h2>
       <p>Une communication externe sera mise en œuvre tout au long du défi, et notamment lors de l'événement de clôture, pour valoriser les participants et leurs accomplissements. </p>
     </div>
