carousel in progress

--- a/app/stylesheets/components/_carousel.scss
+++ b/app/stylesheets/components/_carousel.scss
@@ -1,3 +1,16 @@
-.slide {
-  max-height: 10vh;
+.carousel {
+  position: sticky;
+  top: 0;
+  z-index: -10;
+  .carousel-inner {
+    height: 500px;
+    .carousel-item {
+      object-position: center !important;
+      max-height: 100%;
+      max-width: 100%;
+    }
+    @media (max-height: $tablet) {
+        height: 100%;
+    }
+  }
 }
