--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light ">
+<nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light mt-2 ">
   <%= link_to root_path, class:"navbar-brand" do %>
     <%= inline_svg "home", width: 30, class:"text-light-gray" %>
   <% end %>
