--- a/app/stylesheets/components/_navbar.scss
+++ b/app/stylesheets/components/_navbar.scss
@@ -1,4 +1,25 @@
 .navbar {
+  width: 100%;
   background-color: $blue !important;
   z-index: 10;
+  .nav-link {
+    color: $light-gray !important;
+  }
+  .logo-nav {
+    background-image: image("logo.png");
+  }
 }
+
+.navbar-secondary {
+  background: white;
+  width: 100%;
+  height: 120px;
+}
+
+.navbar-logo {
+  display: none;
+}
+// 
+// #nav_logo {
+//   background-color: white !important;
+// }
