--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -9,7 +9,8 @@
     <%= stylesheet_pack_tag 'application', media: 'all' %>
   </head>
   <body>
-    <%= render 'shared/navbar' %>
+    <%= render 'shared/navbar_secondary' %>
+    <%= render 'shared/navbar_primary' %>
     <%= render 'shared/flashes' %>
     <%= render 'shared/carousel' %>
     <%= yield %>
