--- a/app/views/pages/pourquoi.html.erb
+++ b/app/views/pages/pourquoi.html.erb
@@ -2,18 +2,21 @@
   <h1>1. Pourquoi réduire ses déchets en entreprise ? </h1>
 
   <div class="row">
-    <div class="col-xs-12 col-md-6">
+    <div class="col-12 col-sm-4">
       <figure class="card card-flip">
-        <div class="card">
+
+        <div class="card card-height">
+          <div class="card-img-top d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(<%= image_path("environnement.jpg")%>)">
+            <h4 class="card-title">Environnement</h4>
+          </div>
           <div class="card-body">
-            <h2 class="card-title">Environnement</h2>
             <p class="card-text">140 kg de déchets / an en moyenne sont produit par un·e salarié·e de bureau</p>
           </div>
         </div>
 
-        <div class="card">
+        <div class="card card-height">
           <div class="card-body">
-            <h2 class="card-title">Environnement </h2>
+            <h4 class="card-title">Environnement </h4>
             <p class="card-text">
               Les  solutions  actuelles  pour  traiter  les  déchets  ultimes  ne  sont  pas  optimales  (enfouissement  et  incinération).  Le  recyclage  consomme  aussi  beaucoup  de  ressources  naturelles  (énergie,  eau...)La  réduction  des  déchets  à  la  sourceréduits  les  impacts  environnementaux  (ressources  naturelles,  pollutions...)Le  Zéro  Déchet  (ZD)estune  démarcheayant  pour  objectif  de  réduire  vos  déchets  autant  que  possible.
             </p>
@@ -22,18 +25,20 @@
       </figure>
     </div>
 
-    <div class="col-xs-12 col-md-6">
+    <div class="col-12 col-sm-4">
       <figure class="card card-flip">
-        <div class="card">
+        <div class="card card-height">
+          <div class="card-img-top  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("management.jpg")%>)">
+            <h4 class="card-title">Management</h4>
+          </div>
           <div class="card-body">
-            <h2 class="card-title">Management</h2>
             <p class="card-text">77% des salariés augmentent leur fierté d'appartenance grâce au Développement Durable*</p>
           </div>
         </div>
 
-        <div class="card">
+        <div class="card card-height">
           <div class="card-body">
-            <h2 class="card-title">Management </h2>
+            <h4 class="card-title">Management </h4>
             <p class="card-text">
               Une  politique  ambitieuse  de  réduction  de  vos  déchets  est  un  élément  valorisant,  de  plus  en  plus  attendu  parvos  salarié·e·s,  d'ailleurs  souvent  déjà  pratiquée  dans  leur  vie  personnelle.La  démarche  ZD  est  une  formidable  opportunité  de  mobiliser  vos  équipes  autour  d’un  projet  commun,  dépassant  les  fonctions  de  chacun·e  et  de  contribuer  au  mieux-vivre  dans  votre  structure.
             </p>
@@ -42,18 +47,20 @@
       </figure>
     </div>
 
-    <div class="col-xs-12 col-md-6">
+    <div class="col-12 col-sm-4">
       <figure class="card card-flip">
-        <div class="card">
+        <div class="card card-height">
+           <div class="card-img-top  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("image.jpg")%>)">
+            <h4 class="card-title">Image externe</h4>
+          </div>
           <div class="card-body">
-            <h2 class="card-title">Image externe</h2>
             <p class="card-text">82 % des entreprises considèrent le dDéveloppement dDurable comme un facteur de différenciation*</p>
           </div>
         </div>
 
-        <div class="card">
+        <div class="card card-height">
           <div class="card-body">
-            <h2 class="card-title">Image externe</h2>
+            <h4 class="card-title">Image externe</h4>
             <p class="card-text">
               Tout  comme  les  salarié·e·s,  vos  client·e·s,  fournisseurs,  administré·e·s,  bénéficiaires  et  partenaires  sont  de  plus  en  plus  regardants  sur  le  agissementdes  structures  professionnelles  en  matière  de  Développement  Durable,  etnotamment  en  ce  qui  concerne  les  déchets.Mettre  en  valeur  votre  engagement  environnemental  et  vos  actions  dans  une  démarche  ZD  contribue  positivement  à  votre  image  externe.
             </p>
@@ -62,18 +69,21 @@
       </figure>
     </div>
 
-    <div class="col-xs-12 col-md-6">
+    <div class="col-12 col-sm-4">
       <figure class="card card-flip">
-        <div class="card">
+        <div class="card card-height">
+           <div class="card-img-top  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("economie.jpg")%>)">
+            <h4 class="card-title">Economie</h4>
+          </div>
           <div class="card-body">
-            <h2 class="card-title">Economie</h2>
+
             <p class="card-text">Plus de 14x la seule facture du prestataire déchets : coût complet des déchets*</p>
           </div>
         </div>
 
-        <div class="card">
+        <div class="card card-height">
           <div class="card-body">
-            <h2 class="card-title">Economie</h2>
+            <h4 class="card-title">Economie</h4>
             <p class="card-text">
               Le  coût  complet  de  vos  déchets  inclut les  coûts  de  :
               -  la  gestion  des  déchets  (collectivité  publique  ou  prestataire  privé),
@@ -86,18 +96,20 @@
       </figure>
     </div>
 
-    <div class="col-xs-12 col-md-6">
+    <div class="col-12 col-sm-4">
       <figure class="card card-flip">
-        <div class="card">
+        <div class="card card-height">
+           <div class="card-img-top  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("logistique.jpg")%>)">
+            <h4 class="card-title">Logistique</h4>
+          </div>
           <div class="card-body">
-            <h2 class="card-title">Logistique</h2>
             <p class="card-text">Des contenants adaptés font gagner de 2 à 10 fois plus d’espace et améliorent la logistique d'évacuation.</p>
           </div>
         </div>
 
-        <div class="card">
+        <div class="card card-height">
           <div class="card-body">
-            <h2 class="card-title">Logistique</h2>
+            <h4 class="card-title">Logistique</h4>
             <p class="card-text">
               Les  déchets  stockés  en  vrac  dans  unebenne  ou  dans  un  bac  prennentbeaucoup  de  place,  et  ne  sont  pas  triés. Des  contenants  adaptés  font  gagner  de 2  à  10  fois  plus  d’espace  et  améliorentla  logistique  d'évacuation.  Optimiser  le  rangement  et  réduire  ses déchets  permettent  ainsi  de  diminuer l'espace  de  stockage  et  d'optimiser  la logistique.
             </p>
@@ -106,18 +118,20 @@
       </figure>
     </div>
 
-    <div class="col-xs-12 col-md-6">
+    <div class="col-12 col-sm-4">
       <figure class="card card-flip">
-        <div class="card">
+        <div class="card card-height">
+           <div class="card-img-top  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("reglementation.jpg")%>)">
+            <h4 class="card-title">Réglementation</h4>
+          </div>
           <div class="card-body">
-            <h2 class="card-title">Réglementation</h2>
             <p class="card-text">5 flux de déchets doivent obligatoirement être triés et valorisés</p>
           </div>
         </div>
 
-        <div class="card">
+        <div class="card card-height">
           <div class="card-body">
-            <h2 class="card-title">Réglementation</h2>
+            <h4 class="card-title">Réglementation</h4>
             <p class="card-text">
               Tout  producteur  de  déchet  en  est responsable  jusqu’à  leur  élimination finale-article  L  541-2  et  L  541-22  ducode  de  l’environnement-Les  entreprises  ont  désormais  uneobligation  générale  de  tri  de  leursdéchets,  qui  concerne  5  flux  de  déchets(bois,  plastiques,  métaux,  verre,papier/carton).  Ellesdoivent  les  trierà  la  source  et  organiser  leur  collecteséparément  des  autres  déchets  pourpermettre  leur  valorisation  .  -“décret5  flux”  du  10  mars  2016-
             </p>
@@ -133,17 +147,17 @@
 
     <div class="flip-card">
       </div>
-      <h2>Pour être mis en valeur</h2>
+      <h4>Pour être mis en valeur</h4>
       <p>Une communication externe sera mise en œuvre tout au long du défi, et notamment lors de l'événement de clôture, pour valoriser les participants et leurs accomplissements. </p>
     </div>
 
     <div class="flip-card">
-      <h2>Pour inclure vos équipes</h2>
+      <h4>Pour inclure vos équipes</h4>
       <p>Le Défi a pour objectif d'impliquer tous les salariés de la structure, de générer une réelle collaboration. Ainsi participer au projet permet, au sein de chaque structure, d'agir ensemble, de fédérer et mobiliser une équipe autour d'un projet commun.</p>
     </div>
 
     <div class="flip-card">
-      <h2>Pour l'aspect collectif</h2>
+      <h4>Pour l'aspect collectif</h4>
       <p>L'intérêt du défi est de mettre en commun les doutes, les difficultés, les idées, les bonnes pratiques. Les déchets de fonctionnement concernent toutes les structures, ce qui permet de se nourrir des expériences des autres.
       </p>
     </div>
