--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -10,10 +10,15 @@
   </head>
   <body>
     <%= render 'shared/navbar_secondary' %>
-    <%= render 'shared/navbar_primary' %>
-    <%= render 'shared/flashes' %>
-    <%= render 'shared/carousel' %>
-    <%= yield %>
+    <div class="d-flex flex-column">
+      <%= render 'shared/navbar_primary' %>
+      <%= render 'shared/flashes' %>
+      <%= render 'shared/carousel' %>
+      <div class="flex-grow-1">
+        <%= yield %>
+      </div>
+      <%= render 'shared/footer' %>
+    </div>
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
   </body>
