--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer>
-  <div class=" footer d-flex-colum flex-lg-row align-items-center p-3">
-    
+  <div class=" footer d-flex flex-xs-column align-items-center p-3">
+
     <div class="mx-3">
       <%= inline_svg "logo", width: 100 %>
     </div>
